# incidents

./: README.md  archives.html  authors.html  categories.html  pelicanconf.py  pyproject.toml  tags.html
category/: incident.html
content/incidents/: 2024-05-20-incident-001.md
incidents/: backend-outage.html  database-outage.html
tags/: backend.html  database.html
theme/css/: style.css
theme/templates/: article.html  index.html
themes/github_status/static/css/: style.css
themes/github_status/templates/: article.html  base.html  index.html
